fixed carousel being cut off issue

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -191,7 +191,6 @@ form .submit:hover{
     width: 100%;
     padding: 10px;
     background-color: rgb(62, 9, 148);
-    margin: 10px;
     border: 5px solid lightgray;
     border-radius: 50px;
     overflow: hidden;
